# QrExtractor

./: .gitignore  CMakeLists.txt  main.cpp
include/: BWSExtractor.h  ConfigManager.h
utils/: BWSExtractor.cpp  BWSExtractor.h  ConfigManager.cpp  ConfigManager.h  MuPDFConverter.cpp  MuPDFConverter.h
